--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express-messages": "^1.0.1",
         "express-session": "^1.17.2",
         "moment": "^2.29.1",
+        "mongodb": "^4.2.1",
         "mongoose": "^6.0.3",
         "mongoose-findorcreate": "^3.0.0",
         "morgan": "^1.10.0",
