--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PASS=tegajunior
+PASS=Emmanuel.22
+db=mongodb+srv://ejoor-admin:ejoor2021@cluster0.iocp2.mongodb.net/socialmedia?retryWrites=true&w=majority
